@@ -2,6 +2,7 @@
 0.0.88
 ========================
 
+- added `API.file(filename, path, [formkey])`
 
 ========================
 0.0.87
